Changed instruction text.

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <div class="directions">Choose a team to see their stats for the 2023 NFL season.</div>
             <div class="statDisplay" style="display: none">
                 <div class="teamHeader">
-                    <div class="teamName">Dolphins</div>
+                    <div class="teamName"></div>
                     <div class="teamLogo"><img id="logo" src="" alt="team logo"></div>
                 </div>
                 <div class="teamStats">
-                    <div class="conferenceName">AFC</div>
-                    <div class="record">1 2 3</div>
-                    <div class="divisionName">North</div>        
-                    <div class="streak">L1</div>
-                    <div class="currentPosition">1</div>
-                    <div class="points">53</div>
+                    <div class="conferenceName"></div>
+                    <div class="record"></div>
+                    <div class="divisionName"></div>        
+                    <div class="streak"></div>
+                    <div class="currentPosition"></div>
+                    <div class="points"></div>
                 </div>
             </div>
 
