--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div>Team Viewer</div>
         </div>
         <div class="content">
-            <div class="directions">Choose a team to see thier stats for the 2023 NFL season.</div>
+            <div class="directions">Choose a team to see their stats for the 2023 NFL season.</div>
             <div class="statDisplay" style="display: none">
                 <div class="teamHeader">
                     <div class="teamName">Dolphins</div>
